fix comment like spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -305,7 +305,13 @@ margin-top: 100px;}
   margin: 0;
   background-color: #ddd;
   text-align: center;
-  line-height: 32px;
+  line-height: 26px;
+  font-size: 18px; }
+.comment h2 {
+  margin: 0;
+  background-color: #ddd;
+  text-align: center;
+  line-height: 22px, !important;
   font-size: 18px; }
   #timeline h2 button {
     margin-left: 80%;
@@ -379,7 +385,10 @@ margin-top: 100px;}
     margin: 10px; }
   #timeline .comment #delete-comment {
 
-    vertical-align: bottom; }
+    vertical-align: bottom; 
+    font-size: 14px;
+    color: #3b5998;
+    margin-right: -5px;}
   .no-center {
     text-align: left;
   }
@@ -418,6 +427,7 @@ margin-top: 100px;}
 .no-left-margin {
   margin-left: -60px;
 }
+
 
 
 footer p {
